test(api): pin that an unknown Java version drops the security-manager flag
RED at this commit — the fix follows in the next one.

Reported from a real pack. The Java-24 guard in setupForge only protects users
who ALREADY had a suitable Java installed; a pack that installs its own sails
straight past it:

  No suitable Java installation was found on your system. Proceeding to Java
  installation.
  Downloading and using Java temurin@25
  ...
  Run Command:  java ... -Djava.security.manager=allow -jar server.jar
                --installer-force --installer ...forge-1.20.1-47.4.22-installer.jar
  Error occurred during initialization of VM
  java.lang.Error: A command line option has attempted to allow or enable the
  Security Manager.

Why: JAVA_VERSION starts as the literal "do_not_manually_edit" and is only
filled in by getJavaVersion. None of the three installJava call-sites re-read it
afterwards, and install_java.sh never sets it either — verified in all three
shell templates. So setupForge evaluates

  [[ "${JAVA_VERSION}" =~ ^[0-9]+$ ]] && [[ ${JAVA_VERSION} -ge 24 ]]

against the placeholder, the regex does not match, and the else branch hands SSJ
the fatal flag.

The pin asserts the FAIL-SAFE property rather than just "re-read the version":
an unresolved Java version must never take the branch that passes a flag which
is fatal on the JVMs it cannot rule out. Covers all three shapes the variable
can carry when nothing resolved it — the placeholder, empty, and a non-numeric
value.

Observed failing for the right reason, reproducing the reported run command:

  with JAVA_VERSION='do_not_manually_edit' the security-manager flag was passed
  ... RESULT=@user_jvm_args.txt -Djava.security.manager=allow -jar server.jar ...

Neither the grinder nor ScriptTemplateMatrixIT could have caught this: both
pre-bake Java and never take the install path.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>